to update the link rel

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     </div>
                     <a href="./" aria-current="page" class="navbar-brand w-nav-brand w--current">
                         <img loading="lazy" src="./asset/image/logo-blk.png" alt="logo-stryker-small" class="logo" />
-                        <img loading="lazy" src="./asset/image/nxllogo.png" alt="white-logo" class="white-logo" />
+                        <img loading="lazy" src="./asset/image/logo-blk.png" alt="white-logo" class="white-logo" />
                         <img src="./asset/image/logo.png" alt="logo" class="logo-mobile">
                     </a>
 
@@ -857,7 +857,6 @@
                                                 alt="image-5" s src="./asset/image/cloud_1.jpg" loading="lazy"
                                                 class="teaser-img _2" />
                                         </div>
-
                                         <div class="teaser-copy">
                                             <h2 class="number-text">02</h2>
                                             <div class="teaser-wrap">
@@ -873,29 +872,52 @@
                                         <img src="https://cdn.prod.website-fsssiles.com/6878854b4782d4645sd0f79836/68a2c3f5cb721ef5a91c9e17_portfolio-shap.avif"
                                             loading="lazy" alt="portfolio-shap" class="portfolio-shap _04" />
                                     </div>
+
+                                    <div class="teaser-copy-wrap">
+                                        <div class="teaser-img-tablet-down">
+                                            <img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px"
+                                                srcset="./asset/image/gameapp.jpg 500w, ./asset/image/gameapp.jpg 800w, ./asset/image/gameapp.jpg 2112w"
+                                                alt="image-5" s src="./asset/image/gameapp.jpg" loading="lazy"
+                                                class="teaser-img _2" />
+                                        </div>
+                                        <div class="teaser-copy">
+                                            <h2 class="number-text">03</h2>
+                                            <div class="teaser-wrap">
+                                                <div class="zenith-wrap">
+                                                    <h5 class="zenith">Gaming Solutions</h5>
+                                                </div>
+                                                <div class="portfolio-exar-wrap">
+                                                    <p class="portfolio-exar">Empower your gaming business with
+                                                        innovative, high-performance solutions that enhance player
+                                                        experience and drive growth.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <img src="https://cdn.prod.website-fsssiles.com/6878854b4782d4645sd0f79836/68a2c3f5cb721ef5a91c9e17_portfolio-shap.avif"
+                                            loading="lazy" alt="portfolio-shap" class="portfolio-shap _04" />
+                                    </div>
                                 </div>
+
                                 <div class="teaser-column-02">
                                     <div class="p-teaser-img-wrap">
+
                                         <img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px"
                                             srcset="./asset/image/software.jpg 500w, ./asset/image/software.jpg 800w, ./asset/image/software.jpg 2112w"
-                                            alt="Mask group"
-                                            src="./asset/image/software.jpg"
-                                            loading="lazy" class="teaser-img _1" />
-                                        <!-- <img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px"
-                                            srcset="./asset/image/cloud_1.jpg 500w, ./asset/image/cloud_1.jpg 800w, ./asset/image/cloud_1.jpg 2112w"
-                                            alt="Frame 1430106012"
-                                            src="./asset/image/cloud_1.jpg"
-                                            loading="lazy" class="teaser-img _2" /> -->
+                                            alt="Mask group" src="./asset/image/software.jpg" loading="lazy"
+                                            class="teaser-img _1" />
+
                                         <img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px"
                                             srcset="./asset/image/cloud_1.jpg 500w, ./asset/image/cloud_1.jpg 800w, ./asset/image/cloud_1.jpg 2112w"
                                             alt="Frame 1430106012" src="./asset/image/cloud_1.jpg" loading="lazy"
                                             class="teaser-img _2" />
 
-                                        <!-- <img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px"
-                                            srcset="https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dd7da81b9cb04c247831c_6dca888eacf982fa4d79fd76e2aa0a56_Frame%201430106013-p-500.avif 500w, https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dd7da81b9cb04c247831c_6dca888eacf982fa4d79fd76e2aa0a56_Frame%201430106013-p-800.avif 800w, https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dd7da81b9cb04c247831c_6dca888eacf982fa4d79fd76e2aa0a56_Frame%201430106013.avif 2112w"
-                                            alt="Frame 1430106013"
-                                            src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/689dd7da81b9cb04c247831c_6dca888eacf982fa4d79fd76e2aa0a56_Frame%201430106013.avif"
-                                            loading="lazy" class="teaser-img _3" /> -->
+                                        <img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px"
+                                            srcset="./asset/image/gameapp.jpg 500w, ./asset/image/gameapp.jpg 800w, ./asset/image/gameapp.jpg 2112w"
+                                            alt="Frame 1430106012" src="./asset/image/gameapp.jpg" loading="lazy"
+                                            class="teaser-img _3" />
+
+                                        
+
                                     </div>
                                 </div>
                             </div>
@@ -1584,44 +1606,44 @@
                         <div class="client-wrapped">
                             <!-- Original logos -->
                             <div class="logo-track">
-                                <img src="./asset/image/logos/01.jpg" class="client-img client-logo" />
+                                <img src="./asset/image/logos/01.png" class="client-img client-logo" />
                                 <img src="./asset/image/logos/02.png" class="client-img client-logo" />
                                 <img src="./asset/image/logos/03.png" class="client-img client-logo" />
                                 <img src="./asset/image/logos/04.png" class="client-img client-logo" />
                                 <img src="./asset/image/logos/05.png" class="client-img client-logo" />
                                 <img src="./asset/image/logos/06.png" class="client-img client-logo" />
-                                <img src="./asset/image/logos/07.jpg" class="client-img client-logo" />
-                                <img src="./asset/image/logos/08.jpg" class="client-img client-logo" />
-                                <img src="./asset/image/logos/09.jpg" class="client-img client-logo" />
-                                <img src="./asset/image/logos/10.jpg" class="client-img client-logo" />
-                                <img src="./asset/image/logos/11.jpg" class="client-img client-logo" />
-                                <img src="./asset/image/logos/12.jpg" class="client-img client-logo" />
+                                <img src="./asset/image/logos/07.png" class="client-img client-logo" />
+                                <img src="./asset/image/logos/08.png" class="client-img client-logo" />
+                                <img src="./asset/image/logos/09.png" class="client-img client-logo" />
+                                <img src="./asset/image/logos/10.png" class="client-img client-logo" />
+                                <img src="./asset/image/logos/11.png" class="client-img client-logo" />
+                                <img src="./asset/image/logos/12.png" class="client-img client-logo" />
                                 <img src="./asset/image/logos/13.png" class="client-img client-logo" />
                                 <img src="./asset/image/logos/14.png" class="client-img client-logo" />
-                                <img src="./asset/image/logos/15.jpg" class="client-img client-logo" />
-                                <img src="./asset/image/logos/16.jpg" class="client-img client-logo" />
-                                <img src="./asset/image/logos/17.jpg" class="client-img client-logo" />
+                                <img src="./asset/image/logos/15.png" class="client-img client-logo" /> 
+                                <img src="./asset/image/logos/16.png" class="client-img client-logo" />
+                                <img src="./asset/image/logos/17.png" class="client-img client-logo" />
                             </div>
 
                             <!-- Duplicate logos for seamless loop -->
                             <div class="logo-track">
-                                <img src="./asset/image/logos/01.jpg" class="client-img client-logo" />
+                                <img src="./asset/image/logos/01.png" class="client-img client-logo" />
                                 <img src="./asset/image/logos/02.png" class="client-img client-logo" />
                                 <img src="./asset/image/logos/03.png" class="client-img client-logo" />
                                 <img src="./asset/image/logos/04.png" class="client-img client-logo" />
                                 <img src="./asset/image/logos/05.png" class="client-img client-logo" />
                                 <img src="./asset/image/logos/06.png" class="client-img client-logo" />
-                                <img src="./asset/image/logos/07.jpg" class="client-img client-logo" />
-                                <img src="./asset/image/logos/08.jpg" class="client-img client-logo" />
-                                <img src="./asset/image/logos/09.jpg" class="client-img client-logo" />
-                                <img src="./asset/image/logos/10.jpg" class="client-img client-logo" />
-                                <img src="./asset/image/logos/11.jpg" class="client-img client-logo" />
-                                <img src="./asset/image/logos/12.jpg" class="client-img client-logo" />
+                                <img src="./asset/image/logos/07.png" class="client-img client-logo" />
+                                <img src="./asset/image/logos/08.png" class="client-img client-logo" />
+                                <img src="./asset/image/logos/09.png" class="client-img client-logo" />
+                                <img src="./asset/image/logos/10.png" class="client-img client-logo" />
+                                <img src="./asset/image/logos/11.png" class="client-img client-logo" />
+                                <img src="./asset/image/logos/12.png" class="client-img client-logo" />
                                 <img src="./asset/image/logos/13.png" class="client-img client-logo" />
                                 <img src="./asset/image/logos/14.png" class="client-img client-logo" />
-                                <img src="./asset/image/logos/15.jpg" class="client-img client-logo" />
-                                <img src="./asset/image/logos/16.jpg" class="client-img client-logo" />
-                                <img src="./asset/image/logos/17.jpg" class="client-img client-logo" />
+                                <img src="./asset/image/logos/15.png" class="client-img client-logo" />
+                                <img src="./asset/image/logos/16.png" class="client-img client-logo" />
+                                <img src="./asset/image/logos/17.png" class="client-img client-logo" />
                             </div>
                         </div>
                     </div>
@@ -1705,7 +1727,8 @@
                                     938 key avenues, San Francisco, CA 94124,
                                 </p>
                                 <div data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc86" class="social-icon-wrap">
-                                    <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc87" href="https://www.facebook.com/NXLtechnologiespvtltd" target="_blank"
+                                    <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc87"
+                                        href="https://www.facebook.com/NXLtechnologiespvtltd" target="_blank"
                                         class="footer-social-icon-link-wrap w-inline-block">
                                         <img loading="lazy" src="./asset/image/facebook.png" alt="facbook"
                                             class="socile-icon" />
@@ -1726,7 +1749,8 @@
                                         <img loading="lazy" src="./asset/image/linkedin.png" alt="lindin-white"
                                             class="socile-icon-facebook" />
                                     </a>
-                                    <a href="https://www.instagram.com/nxl.technologies" target="_blank" class="footer-social-icon-link-wrap w-inline-block">
+                                    <a href="https://www.instagram.com/nxl.technologies" target="_blank"
+                                        class="footer-social-icon-link-wrap w-inline-block">
                                         <img loading="lazy" src="./asset/image/instagram.png" alt="pinterest"
                                             class="socile-icon" />
                                         <img loading="lazy" src="./asset/image/instagram.png" alt="pinteres-white"
